--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tradisanalyseR
 Type: Package
-Title: A collection of scripts to analyse TraDIS output from the Bio-TraDIS analysis pipeline.
+Title: A collection of scripts to analyse TraDIS output from the Bio-TraDIS analysis pipeline
 Version: 0.1.0
 Author: Geraldine Sullivan
 Maintainer: Geraldine Sullivan <geraldine.sullivan@hdr.mq.edu.au>
@@ -9,3 +9,10 @@ Description: More about what it does (maybe more than one line)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
+Imports:
+    dplyr,
+    ggplot2,
+    purrr,
+    stats,
+    stringr
