--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,17 @@
 export(logfc_plots)
 export(structure_embl)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,contains)
 importFrom(dplyr,full_join)
+importFrom(dplyr,select)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,theme)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(stats,complete.cases)
