--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,14 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+biocViews:
 Imports:
     dplyr,
     ggplot2,
+    msa,
     purrr,
+    RWebLogo,
+    seqinr,
     stats,
     stringr
 Suggests: 
