--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1.0
 Author: Geraldine Sullivan
 Maintainer: Geraldine Sullivan <geraldine.sullivan@hdr.mq.edu.au>
 Description: A collection of scripts to analyse TraDIS output from the Bio-TraDIS analysis pipeline.
-    Can currently structure Bio-TraDIS csvs and corresponding EMBL files (structure_embl()) and
-    plot log fold changes for a gene list.
+    Frequently updated.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
