removing embl component from structure_embl. Renamed as structure_csv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(get_operons)
 export(get_sig)
 export(logfc_plots)
 export(promoter_weblogo)
-export(structure_embl)
+export(structure_csv)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,contains)
 importFrom(dplyr,full_join)
