--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,12 +15,12 @@ Imports:
     dplyr,
     EDASeq (>= 2.24.0),
     ggplot2,
+    ggseqlogo,
     gridExtra,
     msa,
     purrr,
     reshape2,
     RUVSeq,
-    RWebLogo,
     seqinr,
     stats,
     stringr
