update required packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,10 @@ Imports:
     dplyr,
     EDASeq (>= 2.24.0),
     ggplot2,
+    ggseqlogo,
     gridExtra,
     msa,
+    patchwork,
     purrr,
     reshape2,
     RUVSeq,
