--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_operons)
 export(get_sig)
 export(logfc_plots)
 export(promoter_weblogo)
+export(sig_info)
 export(structure_csv)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,contains)
